# SSHm

./: .gitignore  LICENSE  README.md  agent.py  config.py  executor.py  install.sh  main.py  pyproject.toml  requirements.txt  session.py  setup.py  sshm_architecture.excalidraw  start_point.md  test.pcap  test.py  user_input.py
graphify-out/: graph.html
sshm/: agent.py  config.py  executor.py  main.py  session.py  user_input.py
